--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Pattaya&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;500;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Aref+Ruqaa:wght@400;700&display=swap');
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -13,6 +8,6 @@
   }
   .about-me p,
   .skills-desc {
-    @apply text-sm leading-loose sm:text-base sm:leading-loose xl:text-xl;
+    @apply text-sm leading-loose sm:text-base sm:leading-loose xl:text-xl 2xl:text-2xl 2xl:leading-relaxed;
   }
 }
