--- a/styles/prism.css
+++ b/styles/prism.css
@@ -6,10 +6,10 @@
 
 code[class*='language-'],
 pre[class*='language-'] {
-  color: white;
+  color: #d19a66;
   background: none;
-  -text-shadow: 0 1px white;
-  border-radius: 5px;
+  text-shadow: 0.1px 0.1px;
+  border-radius: 3px;
   font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
   text-align: left;
   white-space: pre;
@@ -41,7 +41,7 @@ pre[class*='language-'] ::selection,
 code[class*='language-']::selection,
 code[class*='language-'] ::selection {
   text-shadow: none;
-  background: #b3d4fc;
+  background: #7257d1;
 }
 
 @media print {
@@ -60,7 +60,20 @@ pre[class*='language-'] {
 
 :not(pre) > code[class*='language-'],
 pre[class*='language-'] {
-  background: #08090a;
+  border: 1px solid black;
+  background: #191919;
+  box-shadow: -5px 5px 0 black;
+}
+
+:not(pre) > html.dark code[class*='language-'],
+html.dark pre[class*='language-'] {
+  border: 1px solid white;
+  box-shadow: -5px 5px 0 #f4fcff;
+}
+
+:not(pre) > code[class*='language-'],
+pre[class*='language-']:lang(ar) {
+  box-shadow: 5px 5px 0 black;
 }
 
 /* Inline code */
@@ -74,11 +87,11 @@ pre[class*='language-'] {
 .token.prolog,
 .token.doctype,
 .token.cdata {
-  color: white;
+  color: #777777;
 }
 
 .token.punctuation {
-  color: #999;
+  color: #777777;
 }
 
 .namespace {
@@ -92,7 +105,7 @@ pre[class*='language-'] {
 .token.constant,
 .token.symbol,
 .token.deleted {
-  color: #905;
+  color: #7257d1;
 }
 
 .token.selector,
@@ -101,7 +114,7 @@ pre[class*='language-'] {
 .token.char,
 .token.builtin,
 .token.inserted {
-  color: #690;
+  color: #98c379;
 }
 
 .token.operator,
