feat: 🎨 Replace scroll events with useHandleScroll & Code Input style fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,4 +10,8 @@
   .skills-desc {
     @apply text-sm leading-loose sm:text-base sm:leading-loose xl:text-xl 2xl:text-2xl 2xl:leading-relaxed;
   }
+
+  .stop-scrolling {
+    @apply h-full overflow-hidden;
+  }
 }
