--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,3 +15,19 @@
     @apply h-full overflow-hidden;
   }
 }
+
+.note-warn {
+  @apply border-rose-600 shadow-rose-600/20 bg-rose-600/10;
+}
+
+.note-tip {
+  @apply border-blue-600 shadow-blue-600/20 bg-blue-600/10;
+}
+
+.note-warn-text {
+  @apply text-rose-600;
+}
+
+.note-tip-text {
+  @apply text-blue-600;
+}
