--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,10 @@
   .stop-scrolling {
     @apply h-full overflow-hidden;
   }
+
+  .custom-thin-scrollbar {
+    @apply scrollbar-thin scrollbar-track-primary-400/40 dark:scrollbar-track-primary-400/20 scrollbar-thumb-primary-dark dark:scrollbar-thumb-primary-400;
+  }
 }
 
 .note-warn {
